02-eks-cluster/samples/ingress-sample-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      nodePort: 30001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-express-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: eks-express-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    external-dns.alpha.kubernetes.io/hostname: eks.devopsnanuvem.com
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-1:654654554686:regional/webacl/waf-eks-express-webacl/44e2e174-c0c7-4ec1-ac4e-13eacecc6c3a
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - eks.devopsnanuvem.com
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
